# maestro

./: .env.example  .gitignore  MAESTRO_EXPANSION_PLAN.md  README.md  pyproject.toml
maestro/: __init__.py  __main__.py  adapter_registry.py  checkpoint.py  cli.py  cost_tracker.py  error_handler.py  feedback.py  learning.py  logger.py  planner.py  runner.py  state_machine.py
maestro/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  grok_build.py  stitch.py
maestro/dag/: __init__.py  scheduler.py  task_graph.py
maestro/dashboard/: index.html  server.py
maestro/db/: __init__.py  schema.sql  store.py
maestro/eval/: harness.py
maestro/git/: branch_manager.py
maestro/grader/: __init__.py  base.py  composite.py  deterministic.py  llm_client.py  pipeline.py  text_grader.py  vision_grader.py
maestro/sandbox/: container.py  credential_isolator.py  network_policy.py
maestro/security/: prompt_guard.py
tests/: test_adapter_registry.py  test_adapters_base.py  test_checkpoint.py  test_cost_tracker.py  test_dag.py  test_dashboard.py  test_error_handler.py  test_eval_harness.py  test_git_isolation.py  test_grader.py  test_grader_pipeline.py  test_learning.py  test_logger.py  test_prompt_guard.py  test_sandbox.py  test_smoke.py  test_store.py
